unpackaged/main/default/objects/pse__Proj__c/fields/Budget_Cost_Adherence__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cost_Adherence__c</fullName>
    <label>Budget/Cost Adherence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>