unpackaged/main/default/objects/pse__Proj__c/fields/Cash_Collection__c.field-meta.xml
<CustomField>
    <fullName>Cash_Collection__c</fullName>
    <label>Cash Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>