unpackaged/main/default/objects/pse__Proj__c/fields/Count_of_RB_Task_Warnings__c.field-meta.xml
<CustomField>
    <fullName>Count_of_RB_Task_Warnings__c</fullName>
    <description>Rollup of Warning Tasks from Role Budgets.</description>
    <label>Count of RB Task Warnings</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>