unpackaged/main/default/objects/pse__Proj__c/fields/CPS_Billing_Type_Analytics__c.field-meta.xml
<CustomField>
    <fullName>CPS_Billing_Type_Analytics__c</fullName>
    <description>Returns the text string value for the Billing Type field, used within the Analytics 'Revenue Forecast' app.</description>
    <formula>TEXT( pse__Billing_Type__c )</formula>
    <label>Billing Type (Analytics)</label>
    <type>Text</type>
</CustomField>