unpackaged/main/default/objects/pse__Proj__c/fields/CPS_Percentage_Complete_From_Tasks__c.field-meta.xml
<CustomField>
    <fullName>CPS_Percentage_Complete_From_Tasks__c</fullName>
    <description>Takes the rolled up hours from Task level and calculates the percentage complete based on all actual hours divided by all estimated hours.</description>
    <formula>CPS_Total_Actual_Hours_From_Tasks__c /  CPS_Total_Estimated_Hours_From_Tasks__c</formula>
    <label>Percentage Complete (From Tasks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>