unpackaged/main/default/objects/pse__Proj__c/fields/CPS_Project_Type_Analytics__c.field-meta.xml
<CustomField>
    <fullName>CPS_Project_Type_Analytics__c</fullName>
    <description>Returns the text string value for the Project Type field, used within the Analytics 'Revenue Forecast' app.</description>
    <formula>TEXT( pse__Project_Type__c )</formula>
    <label>Project Type (Analytics)</label>
    <type>Text</type>
</CustomField>