unpackaged/main/default/objects/pse__Proj__c/fields/CPS_Timecard_Approver__c.field-meta.xml
<CustomField>
    <fullName>CPS_Timecard_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Users are able to define a contact to be the timecard approver. This should overrider the PM as the approver if populated (In conjunction with Approval Processes).</description>
    <inlineHelpText>Select an alternative Timecard Approver to the Project Manager if required.</inlineHelpText>
    <label>Timecard Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Timecard Approver)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>