unpackaged/main/default/objects/pse__Proj__c/fields/CPS_Total_Remaining_Hours_From_Tasks__c.field-meta.xml
<CustomField>
    <fullName>CPS_Total_Remaining_Hours_From_Tasks__c</fullName>
    <description>Used to hold values rolled up from the Project Record's associated Project Task Record's, via flow: Certinia: Project Task - Create/Update (Hours Rollups to Project)</description>
    <label>Total Remaining Hours (From Tasks)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>