unpackaged/main/default/objects/pse__Proj__c/fields/CPS_Work_Planner_Colour__c.field-meta.xml
<CustomField>
    <fullName>CPS_Work_Planner_Colour__c</fullName>
    <description>Field used to determine the string descriptor for the project, which is used to drive colours on the Certinia PSA Planner pages.</description>
    <formula>IF(TEXT( Project_Sub_Types__c) = "Internal - Unavailability", "LightYellow", null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPS Work Planner Colour</label>
    <type>Text</type>
</CustomField>