unpackaged/main/default/objects/pse__Proj__c/fields/CTC_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>CTC_Percent_Complete__c</fullName>
    <formula>IF(ISBLANK( Project_Estimate_to_Complete__c ), ( (pse__Billable_Internal_Hours__c +  pse__Billable_External_Hours__c)  / pse__Planned_Hours__c), ((pse__Billable_Internal_Hours__c +  pse__Billable_External_Hours__c) / (Project_Estimate_to_Complete__c + pse__Billable_Internal_Hours__c +  pse__Billable_External_Hours__c)))</formula>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>