unpackaged/main/default/objects/pse__Proj__c/fields/Customer_Contact_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_Reference__c</fullName>
    <description>Free text field to record the customer contact for invoices and contact.</description>
    <label>Customer Contact Reference</label>
    <length>250</length>
    <type>Text</type>
</CustomField>