unpackaged/main/default/objects/pse__Proj__c/fields/Customer_Relations_Governance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relations_Governance__c</fullName>
    <label>Customer Relations &amp; Proj Governance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>