unpackaged/main/default/objects/pse__Proj__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <inlineHelpText>Enter details of where the work will be delivered (address, contact details, travel instructions and notes).</inlineHelpText>
    <label>Delivery Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>