unpackaged/main/default/objects/pse__Proj__c/fields/Delivery_Quality__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quality__c</fullName>
    <label>Delivery Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>