unpackaged/main/default/objects/pse__Proj__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>ErrorMessage</label>
    <type>TextArea</type>
</CustomField>