unpackaged/main/default/objects/pse__Proj__c/fields/External_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Project Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>