unpackaged/main/default/objects/pse__Proj__c/fields/ffrrPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>ffrrPercentComplete__c</fullName>
    <label>% Complete</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>