unpackaged/main/default/objects/pse__Proj__c/fields/ffrrTotalProjectedRevenue__c.field-meta.xml
<CustomField>
    <fullName>ffrrTotalProjectedRevenue__c</fullName>
    <label>Total Projected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>