unpackaged/main/default/objects/pse__Proj__c/fields/FFX_Complete_Revenue__c.field-meta.xml
<CustomField>
    <fullName>FFX_Complete_Revenue__c</fullName>
    <formula>IMAGE("http://chart.apis.google.com/chart?chxl=0:|0%||100%&amp;chxt=y&amp;chs=200x110&amp;cht=gom&amp;chd=t:"+TEXT(FFX_Budget_Complete__c * 100) + "&amp;chls=3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3|3&amp;chl="+TEXT(ROUND(FFX_Budget_Complete__c* 100,0)) +"%&amp;chma=0,0,5","No Image Available" ,110,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete - Revenue</label>
    <type>Text</type>
</CustomField>