unpackaged/main/default/objects/pse__Proj__c/fields/FFX_MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>FFX_MarginPercent__c</fullName>
    <formula>IF( ffrrRecognizedToDate__c = 0, 0, (( ffrrRecognizedToDate__c - pse__Total_Costs__c )/ffrrRecognizedToDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>