unpackaged/main/default/objects/pse__Proj__c/fields/FFX_PSR_ScheduleStatus__c.field-meta.xml
<CustomField>
    <fullName>FFX_PSR_ScheduleStatus__c</fullName>
    <inlineHelpText>Please enter the schedule status for the week ending date for inclusion in the weekly status report.</inlineHelpText>
    <label>PSR Schedule Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>