unpackaged/main/default/objects/pse__Proj__c/fields/Forterro_Team_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Forterro_Team_Satisfaction__c</fullName>
    <label>Forterro Team Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>