unpackaged/main/default/objects/pse__Proj__c/fields/Group_HIDE__c.field-meta.xml
<CustomField>
    <fullName>Group_HIDE__c</fullName>
    <description>Group Field replicator to capture Group Name to use in Sharing rules</description>
    <formula>pse__Group__r.Name</formula>
    <inlineHelpText>Group Field replicator to capture Group Name to use in Sharing rules</inlineHelpText>
    <label>Group (HIDE)</label>
    <type>Text</type>
</CustomField>