unpackaged/main/default/objects/pse__Proj__c/fields/Invoice_Contact_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Contact_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Poopulated manually or by flow.</description>
    <label>Invoice Contact Reference</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Invoice Contact Reference)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>