unpackaged/main/default/objects/pse__Proj__c/fields/Is_Project_Late__c.field-meta.xml
<CustomField>
    <fullName>Is_Project_Late__c</fullName>
    <description>Is Project Late?</description>
    <formula>pse__End_Date__c &lt; TODAY() &amp;&amp;  pse__Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is Projects End Date in the past?</inlineHelpText>
    <label>Is Project Late</label>
    <type>Checkbox</type>
</CustomField>