unpackaged/main/default/objects/pse__Proj__c/fields/Lead_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Lead Consultant)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>