unpackaged/main/default/objects/pse__Proj__c/fields/MyRegion__c.field-meta.xml
<CustomField>
    <fullName>MyRegion__c</fullName>
    <formula>AND(Contains( pse__Region__r.pse__Region_Name_Chain__c ,$User.Department),
				NOT(ISBLANK(pse__Region__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyRegion</label>
    <type>Checkbox</type>
</CustomField>