unpackaged/main/default/objects/pse__Proj__c/fields/On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Date__c</fullName>
    <description>The date that the project was made 'On Hold'.</description>
    <inlineHelpText>The date that the project was made 'On Hold'.</inlineHelpText>
    <label>On Hold Date</label>
    <type>Date</type>
</CustomField>