unpackaged/main/default/objects/pse__Proj__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>Used for Integration and Data Migration.</description>
    <label>Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>