unpackaged/main/default/objects/pse__Proj__c/fields/Product_Funtionality__c.field-meta.xml
<CustomField>
    <fullName>Product_Funtionality__c</fullName>
    <label>Product Funtionality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>