unpackaged/main/default/objects/pse__Proj__c/fields/Project_Complete__c.field-meta.xml
<CustomField>
    <fullName>Project_Complete__c</fullName>
    <formula>If ( 
       Total_Hours__c == 0, 0 , Total_Actual_Hours__c /  Total_Hours__c
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Actual Hours / Total Hours.</inlineHelpText>
    <label>Project % Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>