unpackaged/main/default/objects/pse__Proj__c/fields/Project_Estimate_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Project_Estimate_to_Complete__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rollup of ETC from Project Tasks</description>
    <inlineHelpText>Sum of Estimate to Complete from Project Tasks.</inlineHelpText>
    <label>Project Estimate to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>