unpackaged/main/default/objects/pse__Proj__c/fields/Project_Margin__c.field-meta.xml
<CustomField>
    <fullName>Project_Margin__c</fullName>
    <description>Calculated project margin based on recognised revenue. Does not use Billing.</description>
    <formula>ffrrRecognizedToDate__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Recognised Revenue - Total Costs</inlineHelpText>
    <label>Project Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>