unpackaged/main/default/objects/pse__Proj__c/fields/Project_Profitability__c.field-meta.xml
<CustomField>
    <fullName>Project_Profitability__c</fullName>
    <label>Project Profitability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>