unpackaged/main/default/objects/pse__Proj__c/fields/Project_Sub_Types__c.field-meta.xml
<CustomField>
    <fullName>Project_Sub_Types__c</fullName>
    <label>Project Sub-Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pse__Project_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSS - Implementation</fullName>
            </value>
            <value>
                <fullName>NSS - Reference Implementation</fullName>
            </value>
            <value>
                <fullName>IBS - Upgrade</fullName>
            </value>
            <value>
                <fullName>IBS - Enhancement</fullName>
            </value>
            <value>
                <fullName>IBS - Ongoing Work</fullName>
            </value>
            <value>
                <fullName>IBS - Cloud Migration</fullName>
            </value>
            <value>
                <fullName>IBS - Subscription Managed Services</fullName>
            </value>
            <value>
                <fullName>PS Subscription - Managed Services</fullName>
            </value>
            <value>
                <fullName>PS Subscription - Forterro Service Points</fullName>
            </value>
            <value>
                <fullName>PS Subscription - Customisation Maintenance</fullName>
            </value>
            <value>
                <fullName>Internal - Business Development</fullName>
            </value>
            <value>
                <fullName>Internal - Packaged Solutions</fullName>
            </value>
            <value>
                <fullName>Internal - Field Innovation</fullName>
            </value>
            <value>
                <fullName>Internal - Organisational Development</fullName>
            </value>
            <value>
                <fullName>Internal - Administration</fullName>
            </value>
            <value>
                <fullName>Internal – Cross-Functional Work</fullName>
            </value>
            <value>
                <fullName>Internal – Unavailability</fullName>
            </value>
            <value>
                <fullName>IBS – Upgrade</fullName>
                <isActive>false</isActive>
                <label>IBS – Upgrade</label>
            </value>
            <value>
                <fullName>Internal - Cross-Functional Work</fullName>
                <isActive>false</isActive>
                <label>Internal - Cross-Functional Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>