unpackaged/main/default/objects/pse__Proj__c/fields/Project_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Project_Timeline__c</fullName>
    <label>Project Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_RAG_Status</valueSetName>
    </valueSet>
</CustomField>