unpackaged/main/default/objects/pse__Proj__c/fields/psaj__Jira_Project_Template__c.field-meta.xml
<CustomField>
    <fullName>psaj__Jira_Project_Template__c</fullName>
    <description>Label for the Jira Project Template.</description>
    <inlineHelpText>Project in Jira used as a template.</inlineHelpText>
    <label>Jira Project Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>