unpackaged/main/default/objects/pse__Proj__c/fields/psaj__Jira_Template__c.field-meta.xml
<CustomField>
    <fullName>psaj__Jira_Template__c</fullName>
    <description>Label for the Jira Template.</description>
    <inlineHelpText>Template in Jira used to create a project.</inlineHelpText>
    <label>Jira Template</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>pse__Jira_Project_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>com.pyxis.greenhopper.jira:basic-software-development-template</fullName>
                <label>Basic software development</label>
            </value>
            <value>
                <fullName>com.pyxis.greenhopper.jira:gh-kanban-template</fullName>
                <label>Kanban software development</label>
            </value>
            <value>
                <fullName>com.atlassian.jira-core-project-templates:jira-core-process-management</fullName>
                <label>Process management</label>
            </value>
            <value>
                <fullName>com.atlassian.jira-core-project-templates:jira-core-project-management</fullName>
                <label>Project management</label>
            </value>
            <value>
                <fullName>com.pyxis.greenhopper.jira:gh-scrum-template</fullName>
                <label>Scrum software development</label>
            </value>
            <value>
                <fullName>com.atlassian.jira-core-project-templates:jira-core-task-management</fullName>
                <label>Task management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>