unpackaged/main/default/objects/pse__Proj__c/fields/pse__Bookings__c.field-meta.xml
<CustomField>
    <fullName>pse__Bookings__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Booked revenue for this project. Budgets of type Customer PO and Customer PO Change Order contribute to bookings.</inlineHelpText>
    <label>Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>