unpackaged/main/default/objects/pse__Proj__c/fields/pse__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>